[package]
name = "max-payne-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stargate-grpc = {version = "0.4.0"}
stargate-grpc-derive = "0.2.0"
tokio = { version = "1", features = ["full"]}
tonic = "0.8.3"
anyhow = "1.0.68"
dotenv = "0.15.0"
reqwest = "0.11.13"
base64 = "0.20.0"
argh = "0.1.9"
oauth2 = "4.3.0"
reqwest-oauth1 = "0.2.3"
csv = "1.1"
rand = "0.8.5"
serde_json = "1.0.91"
oauth1-request = "0.6.0"
serde = "1.0.152"
uuid = {version = "1.2.2", features = ["v1", "v4"]}